<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/additionaly"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <ImageButton
        android:id="@+id/backButton"
        style="@style/BackButton"
        android:layout_width="20dp"
        android:layout_height="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/label_author"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/inputAuthor"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_chevron_down"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingEnd="15dp"
        android:singleLine="false"
        android:hint="@string/write_author"
        android:text="@string/matvey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_author"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/label_collection_ended"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection_ended"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputAuthor" />

    <RadioGroup
        android:id="@+id/radioCollectionEnded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_collection_ended">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when_get_sum"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/in_selected_day"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/label_date_ended"
        style="@style/FieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_ended"
        app:layout_constraintTop_toBottomOf="@id/radioCollectionEnded" />

    <EditText
        android:id="@+id/inputDate"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_chevron_down"
        android:hint="@string/choose_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_date_ended"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/startCollecting"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/create_collection" />

</androidx.constraintlayout.widget.ConstraintLayout>