<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regular_collection"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        style="@style/BackButton"
        android:layout_width="20dp"
        android:layout_height="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="11dp"
        android:text="@string/load_cover"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:drawableLeftCompat="@drawable/ic_gallery"
        app:layout_constraintBottom_toBottomOf="@id/load_cover"
        app:layout_constraintEnd_toEndOf="@id/load_cover"
        app:layout_constraintStart_toStartOf="@id/load_cover"
        app:layout_constraintTop_toTopOf="@id/load_cover" />

    <ImageButton
        android:id="@+id/load_cover"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/cover_background"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/label_collection_name"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collection_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_cover" />

    <EditText
        android:id="@+id/inputCollectionName"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/input_text_background"
        android:hint="@string/collection_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_collection_name" />

    <TextView
        android:id="@+id/label_sum"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum_in_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCollectionName" />

    <EditText
        android:id="@+id/inputSum"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/input_text_background"
        android:hint="@string/how_many_need_in_month"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_sum" />

    <TextView
        android:id="@+id/label_purpose"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purpose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputSum" />

    <EditText
        android:id="@+id/inputPurpose"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/input_text_background"
        android:hint="@string/shelter_support"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_purpose" />

    <TextView
        android:id="@+id/label_description"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPurpose" />

    <EditText
        android:id="@+id/inputDescription"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/input_text_background"
        android:hint="@string/how_will_they_help_someone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_description" />

    <TextView
        android:id="@+id/label_where_get_money"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_get_money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDescription" />

    <EditText
        android:id="@+id/whereGetMoney"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/input_text_background"
        android:drawableEnd="@drawable/ic_chevron_down"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingEnd="15dp"
        android:singleLine="false"
        android:text="@string/vk_pay_1234"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_where_get_money"
        tools:ignore="LabelFor,RtlSymmetry" />

    <TextView
        android:id="@+id/label_author"
        style="@style/FieldName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whereGetMoney" />

    <EditText
        android:id="@+id/inputAuthor"
        style="@style/InputText"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/input_text_background"
        android:drawableEnd="@drawable/ic_chevron_down"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingEnd="15dp"
        android:singleLine="false"
        android:text="@string/matvey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_author"
        tools:ignore="LabelFor,RtlSymmetry" />

    <Button
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/inputAuthor" />

</androidx.constraintlayout.widget.ConstraintLayout>